--- a/conals/package.json
+++ b/conals/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "konva": "^8.4.2",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0"
+    "vue-konva": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.14",
-    "@vue/cli-plugin-typescript": "~4.5.14",
     "@vue/cli-service": "~4.5.14",
     "@vue/compiler-sfc": "^3.0.0",
-    "typescript": "~4.1.5"
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   }
 }
